<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/nav_header_icon_size"
        android:layout_height="@dimen/nav_header_icon_size"
        android:contentDescription="@string/app_name"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/akel_al_mama"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@id/icon"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/nav_item_margin"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/language_spinner"
        app:layout_constraintTop_toBottomOf="@id/title_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/top_group"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/nav_item_top_margin"
                app:constraint_referenced_ids="active_orders,recent_orders,menu_management"
                app:layout_constraintBottom_toTopOf="@id/bottom_group"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/bottom_group"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/nav_item_bottom_margin"
                app:constraint_referenced_ids="test_connection,help,logout"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_group" />

            <Button
                android:id="@+id/active_orders"
                style="@style/Widget.App.Button.TextButton.Nav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_active_orders"
                app:icon="@drawable/ic_active_orders"
                app:layout_constraintBottom_toTopOf="@id/menu_management"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="@id/top_group"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/menu_management"
                style="@style/Widget.App.Button.TextButton.Nav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_item_margin"
                android:text="@string/title_menu_management"
                app:icon="@drawable/ic_menu_mgmt"
                app:layout_constraintBottom_toTopOf="@id/recent_orders"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/active_orders" />


            <Button
                android:id="@+id/recent_orders"
                style="@style/Widget.App.Button.TextButton.Nav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_item_margin"
                android:text="@string/title_recent_orders"
                app:icon="@drawable/ic_recent_orders"
                app:layout_constraintBottom_toTopOf="@id/work_hours"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/menu_management" />

            <Button
                android:id="@+id/work_hours"
                style="@style/Widget.App.Button.TextButton.Nav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_item_margin"
                android:text="@string/title_work_hours"
                app:icon="@drawable/ic_work_hours"
                app:layout_constraintBottom_toBottomOf="@id/top_group"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/recent_orders" />


            <Button
                android:id="@+id/test_connection"
                style="@style/Widget.App.Button.TextButton.Nav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_test_connection"
                app:icon="@drawable/ic_connection"
                app:layout_constraintBottom_toTopOf="@id/help"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="@id/bottom_group"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/help"
                style="@style/Widget.App.Button.TextButton.Nav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_item_margin"
                android:text="@string/title_help_and_support"
                app:icon="@drawable/ic_help"
                app:layout_constraintBottom_toTopOf="@id/logout"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/test_connection" />


            <Button
                android:id="@+id/logout"
                style="@style/Widget.App.Button.TextButton.Nav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_item_margin"
                android:text="@string/title_logout"
                app:icon="@drawable/ic_logout"
                app:layout_constraintBottom_toBottomOf="@id/bottom_group"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/help" />


            <include layout="@layout/guidelines" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/nav_item_margin"
        android:entries="@array/languages"
        app:layout_constraintBottom_toTopOf="@id/version"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.App.ListPrimary"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        tools:text="v1.0" />


    <include layout="@layout/guidelines" />
</androidx.constraintlayout.widget.ConstraintLayout>
