<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_test_connection"
            android:textAppearance="@style/TextAppearance.App.H3"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop" />


        <ImageView
            android:id="@+id/status_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/test_connection_loading_msg"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            app:srcCompat="@drawable/ic_check" />

        <TextView
            android:id="@+id/connection_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/connection_type"
            android:textAppearance="@style/TextAppearance.App.Small"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/status_image" />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            app:cpb_background_progressbar_color="@color/blue"
            app:cpb_background_progressbar_width="3dp"
            app:cpb_indeterminate_mode="true"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/blue"
            app:cpb_progressbar_width="6dp"
            app:cpb_round_border="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/connection_type_text_view" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/status_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="progress_bar,status_image" />

        <TextView
            android:id="@+id/message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/test_connection_loading_msg"
            android:textAppearance="@style/TextAppearance.App.Body"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/status_barrier" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.App.Button.Outlined.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/test_connection_cancel"
            app:layout_constraintEnd_toStartOf="@id/retry_button"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/message_text_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            style="@style/Widget.App.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/test_connection_retry"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/message_text_view" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>